--- a/MicroServices/MicroServices.Services.Identity/appsettings.json
+++ b/MicroServices/MicroServices.Services.Identity/appsettings.json
@@ -5,6 +5,11 @@
     }
   },
   "AllowedHosts": "*",
+  "mongo": {
+    "connectionString": "mongodb://localhost:27017",
+    "database": "MicroServices-Identity",
+    "seed": true
+  },
   "rabbitMq": {
     "Username": "guest",
     "Password": "guest",
