--- a/MicroServices/MicroServices.Services.Identity/appsettings.json
+++ b/MicroServices/MicroServices.Services.Identity/appsettings.json
@@ -10,6 +10,11 @@
     "database": "MicroServices-Identity",
     "seed": true
   },
+  "jwt": {
+    "secretKey": "3h6wZxh9dxdYHnZLvYdSa6KL3Tw9BQqRd6Yv3gjucG3hsGwY6D",
+    "expiryMinutes": 5,
+    "issuer": "http://localhost:5000"
+  },
   "rabbitMq": {
     "Username": "guest",
     "Password": "guest",
