--- a/MicroServices/MicroServices.Api/appsettings.json
+++ b/MicroServices/MicroServices.Api/appsettings.json
@@ -5,6 +5,11 @@
     }
   },
   "AllowedHosts": "*",
+  "jwt": {
+    "secretKey": "3h6wZxh9dxdYHnZLvYdSa6KL3Tw9BQqRd6Yv3gjucG3hsGwY6D",
+    "expiryMinutes": 5,
+    "issuer": "http://localhost:5000"
+  },
   "rabbitMq": {
     "Username": "guest",
     "Password": "guest",
